app/src/test/resources/programs/invalid/loops/InconsistientBreakLoopType.extenstion
fun main() -> Int = {
    loop {
        // Inconsitient type of break for Int and Bool
        if true then {
            break 1;
        }
        break false;
    }
}